# trip-server-2

./: .env  .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  ChangeLog  Dockerfile  Dockerfile-postgis  Dockerfile-postgis-trixie.in  Dockerfile-postgis.in  Dockerfile-tile-server.in  Dockerfile-trixie.in  Dockerfile.in  Makefile.am  README.md  RELEASE_PROCEDURE.md  Vagrantfile  configure.ac  docker-build.sh.in  docker-compose-map-demo.yml  docker-compose-map-import.yml  docker-compose-map-server.yml  docker-compose-trixie.yml.in  docker-compose.yml  docker-compose.yml.in  docker-entrypoint.sh.in  trip-server-dist.yaml  trip-server.yaml  valgrind.supp
conf/: trip-server-dist.yaml  trip.service
doc/: Makefile.am  trip-server-ref.sgml  trip-server.1  trip-server.texi  trip-user-guide.texi
m4/: ChangeLog  systemd-conf.m4  trip_check_pqxx.m4  trip_check_uuid_func.m4  trip_web_options.m4
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  en_GB.po  es.po  fr.po  trip.pot
provisioning/: bootconfig.sh  bootstrap.sh  debian-on-macos-setup.sh  init.sh  podman-setup.sh  qemu-init.sh
provisioning/apache2/: etc-apache2-conf-available-renderd.conf  etc-apache2-conf-available-trip.conf
provisioning/docker/: tile_server_run.sh
provisioning/logrotate.d/: trip
provisioning/nginx/: LICENSE  index.html  trip.conf
provisioning/nginx/conf.d/: trip.conf
provisioning/nginx/sites-available/: trip
provisioning/patches/: libpqxx6-tools-splitconfig.patch
provisioning/schema/: 10_init-trip-db.sh  10_trip_role.sql  11_init-gis-db.sh  20_schema.sql  30_permissions.sql  35_user_roles.sql  40_path_colors.sql  50_georef_formats.sql  60_waypoint_symbols.sql  90_test-data.sql  create_gis_indexes.sh  revoke_all.sql
provisioning/systemd/: trip-server-2.service
resources/static/css/: trip.css
resources/static/js/: change-password.js  itinerary-map.js  itinerary-path-join.js  itinerary-route-edit.js  itinerary-segment-edit.js  itinerary-track-edit.js  itinerary-waypoint.js  map.js  simplify-path.js  tracking-map.js
resources/static/js/modules/: geo-utils.js  itinerary.js  location-service.js  map.js  utils-service.js
src/: Makefile.am  admin_status_handler.cpp  admin_status_handler.hpp  admin_user_edit_handler.cpp  admin_user_edit_handler.hpp  admin_user_management_handler.cpp  admin_user_management_handler.hpp  download_triplogger_configuration_handler.cpp  download_triplogger_configuration_handler.hpp  elevation_tile.cpp  elevation_tile.hpp  geo_utils.cpp  geo_utils.hpp  itineraries_handler.cpp  itineraries_handler.hpp  itinerary_download_handler.cpp  itinerary_download_handler.hpp  itinerary_edit_handler.cpp  itinerary_edit_handler.hpp  itinerary_export_handler.cpp  itinerary_export_handler.hpp  itinerary_handler.cpp  itinerary_handler.hpp  itinerary_import_handler.cpp  itinerary_import_handler.hpp  itinerary_map_handler.cpp  itinerary_map_handler.hpp  itinerary_path_join_handler.cpp  itinerary_path_join_handler.hpp  itinerary_path_name_edit.cpp  itinerary_path_name_edit.hpp  itinerary_pg_dao.cpp  itinerary_pg_dao.hpp  itinerary_rest_handler.cpp  itinerary_rest_handler.hpp  itinerary_route_edit_handler.cpp  itinerary_route_edit_handler.hpp  itinerary_route_join_handler.cpp  itinerary_route_join_handler.hpp  itinerary_search_handler.cpp  (+71 more)
tests/: Makefile.am  testsuite.at
